--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-*
-!config/
-!defaultconfigs/
-!mods/
-!resourcepacks/
-!shaderpacks/
-!.gitignore
+# *
+
+# # non default config files/folders
+# config/fabric/
+# !config/
+# !config/defaultoptions/
+# !config/defaultoptions/options.txt
+# !config/defaultoptions/keybindings.txt
+
+# !defaultconfigs/
+# !mods/
+# !resourcepacks/
+# !shaderpacks/
+# !.gitignore
