new mods for difficulta and utility

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,13 @@
 !config/tameable-beasts-common.toml
 !config/tarotcards-common.toml
 !config/aether-common.toml
-!config/startkit.json5
+!config/betterf3.toml
+!config/majruszsdifficulty.json
+!config/Feathers-Client.toml
+!config/Feathers-Common.toml
+!config/Elenai-Dodge-2-Client.toml
+!config/Elenai-Dodge-2-Common.toml
+!config/starterkit.json5
 !config/starterkit/
 !config/starterkit/kits/
 !config/starterkit/kits/**
@@ -33,7 +39,13 @@ config/**/*
 !config/tameable-beasts-common.toml
 !config/tarotcards-common.toml
 !config/aether-common.toml
-!config/startkit.json5
+!config/betterf3.toml
+!config/majruszsdifficulty.json
+!config/Feathers-Client.toml
+!config/Feathers-Common.toml
+!config/Elenai-Dodge-2-Client.toml
+!config/Elenai-Dodge-2-Common.toml
+!config/starterkit.json5
 !config/starterkit/
 !config/starterkit/kits/
 !config/starterkit/kits/**
